k8s/whoami2/whoami-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami2

spec:
  ports:
    - name: web
      port: 80
      targetPort: web

  selector:
    app: whoami2
