k8s/whoami2/whoami-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami2-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: whoami2
            port:
              name: web
